--- a/search/index.html
+++ b/search/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="subs.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script type="text/javascript" src="subs.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <script type="text/javascript" src="search.js"></script>  
     <title>xxd</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +13,8 @@
         <div class='header-container'>
             <div class='header-left'>
                 <div>
-                    <a class="main-logo-link" href="/" target="_blank" rel="noopener"><div>
-                        <img class="main-logo-image" src="xxd.png" alt="MyTube">
+                    <a class="main-logo-link" href="../" target="_blank" rel="noopener"><div>
+                        <img class="main-logo-image" src="../xxd.png" alt="MyTube">
                     </div></a>
                 </div>
             </div>
@@ -23,19 +23,18 @@
                     <div class="search-bar">
                         <input class="search-field" placeholder="Search" id="search-field" onkeydown="keydownSearch(event)">
                         <button class="search-button" onclick="search()">
-                            <img src="search.png" class="search-image">
+                            <img src="../search.png" class="search-image">
                         </button>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <div class="main-content">
-        <div class="container">
-            <progress id="progress-bar" max="52" value="0"></progress>
-            <div class="grid" id="grid">
+    <div class="search-main-content">
+        <div class="search-videos-container-wide">
+            <div class="search-videos-container" id="search-videos-container">
+                
             </div>
         </div>
     </div>
 </body>
-</html>
