fixed links with project migration

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class='header-container'>
             <div class='header-left'>
                 <div>
-                    <a class="main-logo-link" href="/" target="_blank" rel="noopener"><div>
+                    <a class="main-logo-link" href=""><div>
                         <img class="main-logo-image" src="xxd.png" alt="MyTube">
                     </div></a>
                 </div>
