added video sharing
takes advantage of local storage on the receiving end, as to not share your api key too.

--- a/watch/index.html
+++ b/watch/index.html
@@ -43,7 +43,7 @@
                         <img src="../like.png">
                         <h3 id="likes">Likes</h3>
                     </div>
-                    <div class="like-share-container" onclick="alert(1)">
+                    <div class="like-share-container" id="share-button" onclick="share()" data-tooltip="copy to clipboard">
                         <img src="../share.png">
                         <h3 id="likes">Share</h3>
                     </div>
