added links to channels across the different pages
videos and comments now enable you to click on a channel to open the according channel page

--- a/watch/index.html
+++ b/watch/index.html
@@ -52,9 +52,13 @@
             <hr>
             <div class="main-video-channel-info">
                 <div class="channel-info">
-                    <img class="avatar" id="channel-avatar" src="" alt="avatar">
+                    <a id="channel-link-avatar" href="https://google.com" target="_blank" rel="noopener">
+                        <img class="avatar" id="channel-avatar" src="" alt="avatar">
+                    </a>
                     <div>
-                        <h3 class="channel-name" id="main-channel-name">Channel Name</h3>
+                        <a id="channel-link-name" href="https://google.com" target="_blank" rel="noopener">
+                            <h3 class="channel-name" id="main-channel-name">Channel Name</h3>
+                        </a>
                         <p id="subscribers">X subscribers</p>
                     </div>
                 </div>
