added link to editor from subs page
added a gear icon to get from the sub-page to the editor. also made some small improvements.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
                     </div>
                 </div>
             </div>
+            <div class='header-right'>
+                <div>
+                    <a class="edit-link" href="subbox-editor/" id="edit-link"><div class="tooltip">
+                        <img class="edit-image" src="gear.png" alt="edit">
+                        <span class="tooltiptext">edit subbox</span>
+                    </div></a>
+                </div>
+            </div>
         </div>
     </header>
     <div class="main-content">
