adjusted title, keywords and descriptions
improved SEO by adding metadata and adjusting the title

--- a/channel/index.html
+++ b/channel/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="channel.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script type="text/javascript" src="channel.js"></script>
-    <title>xxd</title>
+    <title>xxd video - channel</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="video, xxd-video, xxd video, xxd-dev, xxd, free">
+	<meta name="description" content="xxd video is a viewer for youtube videos that gets rid of distracting recommendations and lets you focus on the channels that are important to you. migrate your subscriptions and watch your videos on a platform that has no incentive to keep you glued to the screen, but respects your personal time and freedom.">
 </head>
 <body onload="main()">
     <header>
@@ -32,9 +34,9 @@
     </header>
     <div class="main-content">
         <div class="channel-header">
-            <img class="avatar" id="channel-avatar" src="https://yt3.ggpht.com/ytc/AKedOLTmcAt7u2aJrmAfRkcKOswB1PViNM21yhAD1TX4Tg=s176-c-k-c0x00ffffff-no-rj" alt="avatar">
+            <img class="avatar" id="channel-avatar" src="" alt="avatar">
             <div>
-                <h2 id="channel-name">darkweeber</h2>
+                <h2 id="channel-name">channelname</h2>
                 <p class="subs" id="channel-subscribers">a few subscribers</p>
                 <p class="subs" id="channel-views">some channelviews</p>
             </div>
