--- a/watch/index.html
+++ b/watch/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <script type="text/javascript" src="watch.js"></script>  
-    <title>xxd</title>
+    <title>xxd video - watch</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="video, xxd-video, xxd video, xxd-dev, xxd, free">
+	<meta name="description" content="xxd video is a viewer for youtube videos that gets rid of distracting recommendations and lets you focus on the channels that are important to you. migrate your subscriptions and watch your videos on a platform that has no incentive to keep you glued to the screen, but respects your personal time and freedom.">
 </head>
 <body onload="main()">
     <header>
