--- a/channel/index.html
+++ b/channel/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="channel.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <script type="text/javascript" src="channel.js"></script>
     <title>xxd</title>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
         <div class='header-container'>
             <div class='header-left'>
                 <div>
-                    <a class="main-logo-link" href=""><div>
+                    <a class="main-logo-link" href="../"><div>
                         <img class="main-logo-image" src="../xxd.png" alt="MyTube">
                     </div></a>
                 </div>
